hphp/hack/test/typecheck/coeffects/write_props/recursive_index_op_error.php.exp
File "recursive_index_op_error.php", line 12, characters 3-38:
Writing to object properties requires the capability WriteProperty, which is not provided by the context (Parsing[1002])
File "recursive_index_op_error.php", line 12, characters 3-32:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "recursive_index_op_error.php", line 11, characters 31-32:
  The local (enclosing) context provides the capability set {}
